# test

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  format_code.sh  license_template.txt  pelicanconf.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bar.md  foo.md
.travis/: build_linux.sh  ci_release_publisher_cleanup1.sh  ci_release_publisher_cleanup2.sh  ci_release_publisher_cleanup3.sh  ci_release_publisher_cleanup4.sh  ci_release_publisher_cleanup5.sh  ci_release_publisher_collect.sh  ci_release_publisher_publish.sh  ci_release_publisher_store.sh  deploy_cleanup.sh  deploy_cleanup_store.sh  deploy_release.sh  deploy_store.sh
.travis/tools/ci_release_publisher/: __main__.py  __version__.py  ci_release_publisher.py  cleanup_store_release.py  cleanup_store_scope.py  config.py  github.py  latest_release.py  numbered_release.py  requests_retry.py  requirements.txt  tag_release.py  temporary_draft_release.py  temporary_store_release.py  travis.py
.travis/tools/continuous_release/: continuous_release.py
content/: 2018-04-06_this-is-a-slug.en.md
output/: archives.html  authors.html  categories.html  index.html  tags.html
output/author/: test.html
output/category/: misc.html
output/posts/2018/04/06/article-title/: index.html
src/: main.cpp  main_window.cpp  main_window.h
